1998-11-28  Bernd Wuebben  <wuebben@petit.cornell.edu>

	* kscd.cpp: resinstated old look and behavior
	Sam, we should talk ...

1998-11-20 Sam Maloney <thufir@illogic.ml.org>

	* Fixed bug/"missing thing" were it would just crash when loading
	  up if it couldn't find the cddb base dir. Now it will use
	  InexactDialog to prompt the user for the directory. (cancel button
	  will force it to get from remote). 
	* NOTE: Im just going fix the inexact dialog box so it can be
	  single line input, (for the cddb dialog), then ill probably
	  release 1.2.4, unless anyone has any objections. (to lazy to fix
	  tonite)

1998-11-11 Sam Maloney <thufir@illogic.ml.org>

	* Fixed bug with debug flag being messed up when docking
	  (incorrect extern statement)
	* Worked around a wierd bug thing with docking. (consult
	  docking.cpp in toggleState() )

1998-11-08 Robert Bossecker <Robert.Bossecker@fresenius.de>

	* Fixed problem with editing EXT info, where if you edited track
	  x, it would (stupidly) modify x-1. If editing track 1, it would
	  modify the extinfo for the Title.

1998-11-06 Sam Maloney <thufir@illogic.ml.org>

	* Made smtpMailer a global widget, so it could mail in background. 
	* Fixed problem were after submitting a record via SMTP, and
	  having an error, if one tried to exit Kscd, it would close all
	  widgets, but be stuck in while loop.
	* Added error/success reporting of SMTP submissions.
	* Fixed problem with Local Cache, where it would ignore leading
	  0's in record file names, thus not finding them when looking for 
	  that record.
	* Added a timeout when waiting for server interaction.

1998-11-04  Sam Maloney  <thufir@illogic.ml.org>

	* Fixed problem with 'dock' button, when AutoDock is turned on.
	* Implimented SMTP code, so Kscd no longer requires sendmail/unix
	  mail program(s) to submit CDDB records.
	* Added VERY requested feature, of having it retract the tray if
	  its ejected, when one hits the eject button.
